Fix broken css

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,11 +1,11 @@
 .ged-popover
-  position:   "fixed"
-  left:       "100px"
-  top:        "100px"
-  bottom:     "100px"
-  right:      "100px"
-  background: "#73afb6"
-  color:      "#eefcff"
-  overflow-y: "auto"
+  position:   fixed
+  left:       100px
+  top:        100px
+  bottom:     100px
+  right:      100px
+  background: #73afb6
+  color:      #eefcff
+  overflow-y: auto
   z-index:    9999
-  border:     "solid #2b2301 1px"
+  border:     solid #2b2301 1px
